--- a/index.html
+++ b/index.html
@@ -1,6 +1,70 @@
 <!DOCTYPE html>
 <html>
-  <main>
-    <div>Blank<div>
-  </main>
+
+  <!-- A brief overview of the workflow.
+   P = Paragraph
+   H = Header
+   A = Anchor element, commonly used for href
+   OL = Ordered list
+   UL = Unordered List
+   DL = Definition List
+   LI = List item
+   Nav = Navigation
+   Main is the content that changes from page to page
+   Header, Footer, Body, and Head stay roughly the same each time
+  --> 
+
+  <head>
+    <link rel="stylesheet" href="CSS/main.css">
+    <title>Axiom</title>
+    <script src="JS/main.js"></script>
+  </head>
+
+  <body>    
+    <header>
+      <h1></h1>
+      <p></p>
+
+    </header>
+
+    <nav>
+      <a></a>
+      <a></a>
+      <a></a>
+      <a></a>
+    </nav>
+
+    <main>
+      <h1>Welcome</h1>
+      <h1 style="font-family: Arial, Helvetica, sans-serif;">Welcome</h1>
+      <h1 style="font-family: Univers">Welcome</h1>
+      <h1 style="font-family: Century Gothic">Welcome</h1>
+      <article>
+        <h2></h2>
+        <p></p>
+        <p>
+          <a></a>
+        </p>
+      </article>
+    </main>
+    
+    <aside>
+      <h2></h2>
+      <p></p>
+      <p>
+        <a></a>
+      </p>
+    </aside>
+
+    <footer>
+      <nav>
+        <a></a>
+        <a></a>
+        <a></a>
+        <a></a>
+      </nav>
+    </footer>
+  </body>
+
+
 </html>
