Set up baseline

--- a/index.html
+++ b/index.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
 <html>
-
-  <!-- A brief overview of the workflow.
-   P = Paragraph
-   H = Header
-   A = Anchor element, commonly used for href
-   OL = Ordered list
-   UL = Unordered List
-   DL = Definition List
-   LI = List item
-   Nav = Navigation
-   Main is the content that changes from page to page
-   Header, Footer, Body, and Head stay roughly the same each time
-  --> 
-
   <head>
     <link rel="stylesheet" href="CSS/main.css">
     <title>Axiom</title>
+    <link rel="icon" href="Assets/AT.png" type="image/x-icon">
     <script src="JS/main.js"></script>
   </head>
 
   <body>    
     <header>
-      <h1></h1>
-      <p></p>
+      <a id="Logo" href="https://axiomexperimental.org">
+        <img id="AxiomLogo" src="Assets/Axiom.png">
+        <img id="ExperimentalLogo" src="Assets/experimental.png">
+      </a>
+
+      <p class="typed-out">Learn, Think, Test!</p>
+
+      <div id="TopNav">
+        
+      </div>
 
     </header>
-
+    
+    <div id="content">
     <nav>
       <a></a>
       <a></a>
@@ -35,10 +31,7 @@
     </nav>
 
     <main>
-      <h1>Welcome</h1>
-      <h1 style="font-family: Arial, Helvetica, sans-serif;">Welcome</h1>
-      <h1 style="font-family: Univers">Welcome</h1>
-      <h1 style="font-family: Century Gothic">Welcome</h1>
+      <h1>Page Subject</h1>
       <article>
         <h2></h2>
         <p></p>
@@ -65,6 +58,6 @@
       </nav>
     </footer>
   </body>
-
+  </div>
 
 </html>
