--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="CSS/main.css">
     <title>Axiom</title>
-    <link rel="icon" href="Assets/AT.png" type="image/x-icon">
+    <link rel="icon" href="Assets/ATrsprnt.png" type="image/x-icon">
     <script src="JS/main.js"></script>
   </head>
 
