--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="Content-Security-Policy"
+    content="
+      font-src 'self' axiomexperimental.org  fonts.googleapis.com 'unsafe-eval' 'unsafe-inline'; 
+      "
+  />
     <link rel="stylesheet" href="CSS/main.css">
     <title>Axiom</title>
     <link rel="icon" href="Assets/ATrsprnt.png" type="image/x-icon">
