--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Security-Policy"
     content="
-      font-src 'self' axiomexperimental.org  fonts.googleapis.com 'unsafe-eval' 'unsafe-inline'; 
+      font-src 'self' axiomexperimental.org fonts.googleapis.com fonts.gstatic.com 'unsafe-eval' 'unsafe-inline'; 
       "
   />
     <link rel="stylesheet" href="CSS/main.css">
